build/log/idf_py_stderr_output_17976
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledResetView':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:135:46: warning: passing argument 2 of 'i2cSetTransmitBuffer' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  135 |     ret = i2cSetTransmitBuffer(oled->i2cDev, cmds, sizeof(cmds));
      |                                              ^~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:62:49: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   62 | def i2cSetTransmitBuffer(i2cDev_t * dev, void * txdPtr, size_t size);
      |                                          ~~~~~~~^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:142:12: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
  142 |     return OKE;
      |            ^~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:111:6: note: declared here
  111 | void oledResetView(oled128x64Dev_t *oled) {
      |      ^~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:146:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
  146 |         return ERR;
      |                ^~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:111:6: note: declared here
  111 | void oledResetView(oled128x64Dev_t *oled) {
      |      ^~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledShowRAMContent':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:170:9: warning: unused variable 'ret' [-Wunused-variable]
  170 |     def ret;
      |         ^~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/build.make:79: esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/oled128x64.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7497: esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
